--- a/style.css
+++ b/style.css
@@ -26,14 +26,22 @@ header{
 }
 
 .name{
-    float: left;
+    margin-top: 30px;
+    margin: 10;
+    float: right;
+    color: #bdc4d4;
+    font-size: large;
+    margin-left: 20px;
 }
 #logo{
     width: 500px;
     height: 500px;
-    margin: 50px;
+    margin: 100px;
     float: left;
+    
 }
+
+
 
 nav{
     float: right;
@@ -136,6 +144,7 @@ footer
     }
 
     .name{
+        margin: 20px;
         margin-top: 56px;
         float: left;
         color: #bdc4d4;
@@ -147,7 +156,7 @@ footer
         height: 100px;
         margin: 20px;
         float: left;
-        margin-top: 10px;
+        margin-top: 20px;
     }
 
     .link{
