--- a/style.css
+++ b/style.css
@@ -21,12 +21,13 @@ body{
 header{
     background-color: #00a2ff;
     width: 100%;
-    height: 650px;
-    float: left;
+    height: 70px;
+    margin-bottom: 25px;
+    top: 0;
 }
 
 .name{
-    margin-top: 30px;
+     margin-top: 30px;
     margin: 10;
     float: right;
     color: #bdc4d4;
@@ -34,9 +35,9 @@ header{
     margin-left: 20px;
 }
 #logo{
-    width: 500px;
-    height: 500px;
-    margin: 100px;
+    width: 50px;
+    height: 50px;
+    margin: 0px;
     float: left;
     
 }
@@ -44,9 +45,15 @@ header{
 
 
 nav{
-    float: right;
+    margin-top: 25px;
+    margin: 10;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #00a2ff;
     display: flex;
-    margin: 20px;
+    width: 100%;
+    flex-direction: column;
 }
 
 .nav-link{
