--- a/style.css
+++ b/style.css
@@ -19,11 +19,13 @@ body{
 }
 
 header{
+    position: relative;
     background-color: #00a2ff;
     width: 100%;
     height: 70px;
     margin-bottom: 25px;
     top: 0;
+    z-index: 1000;
 }
 
 #top{
